# chatGPT

./: .env_example  README.md  pyproject.toml  requirements.txt
NLP-to-SQL/: main.py
auto-generate-blog-posts-with-images/: main.py  notebook.ipynb
create-recipe-from-ingredients/: notebook.ipynb
generate-exam-questions-from-a-topic/: main.py
src/: NLP-to-SQL.ipynb
src/NLP-to-SQL/: main.py  notebook.ipynb  utils.py
src/generate-exam-questions/: notebook.ipynb
