[tool.poetry]
name = "openai-bootcamp"
version = "0.1.0"
description = ""
authors = ["Lal <lalzadamohmand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
3 = "^0.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
